Increased Modal Z-Index to 99999 to ensure visibility on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -2109,7 +2109,7 @@ html.lenis {
     display: none;
     /* Toggled by JS */
     position: fixed;
-    z-index: 2000;
+    z-index: 99999;
     left: 0;
     top: 0;
     width: 100%;
